// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Atoms/Paragraph default 1`] = `
<p
  className="sc-hKFyIo jlcMWN"
>
  Nisi eu eiusmod cupidatat aute laboris commodo excepteur esse dolore incididunt incididunt aliquip pariatur est minim officia sit. Nulla pariatur duis duis quis commodo cupidatat voluptate enim culpa elit adipisicing do cupidatat sint anim. Cillum elit magna occaecat proident sit cupidatat ad quis sunt id culpa culpa. Ad duis nulla in incididunt amet consequat officia ad voluptate voluptate. Pariatur eiusmod ullamco cupidatat non magna officia aute magna deserunt qui aute dolor eu. Qui amet non ex cillum sunt ad velit consequat ipsum velit.
</p>
`;

exports[`Storyshots Components/Button Default Story 1`] = `
<button
  className="sc-bdnylx hdrhwD"
>
  <span>
    Default Background
  </span>
</button>
`;

exports[`Storyshots Components/Button Disabled 1`] = `
<button
  className="sc-bdnylx kcAIQv"
  disabled={true}
  onClick={[Function]}
>
  <span>
    Disabled Button
  </span>
</button>
`;

exports[`Storyshots Components/Checkbox default 1`] = `
<div
  className="sc-gtssRu fhpWRL"
>
  <input
    className="sc-dlnjPT dnDREv"
    type="checkbox"
  />
  <div />
</div>
`;

exports[`Storyshots Components/Checkbox normal checkbox -- checked 1`] = `
<input
  checked={true}
  type="checkbox"
/>
`;

exports[`Storyshots Components/Checkbox normal checkbox 1`] = `
<input
  type="checkbox"
/>
`;

exports[`Storyshots Components/Checkbox type checkbox - checked 1`] = `
<div
  className="sc-gtssRu fhpWRL"
>
  <input
    className="sc-dlnjPT dnDREv"
    type="checkbox"
  />
  <div />
</div>
`;

exports[`Storyshots Components/Checkbox type checkbox - indeterminate 1`] = `
<div
  className="sc-gtssRu fhpWRL"
>
  <input
    className="sc-dlnjPT dnDREv"
    type="checkbox"
  />
  <div />
</div>
`;
